# aati

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.toml  README.md  install.sh  uninstall.sh
.github/workflows/: rust.yml
scripts/: install.sh  uninstall.sh
src/: commands.rs  commons.rs  config.rs  constants.rs  globals.rs  main.rs  structs.rs  types.rs  utils.rs  version.rs
src/commands/: changelog.rs  common.rs  generate.rs  get.rs  info.rs  install.rs  list.rs  mod.rs  package.rs  query.rs  remove.rs  repo.rs  serve.rs  sync.rs  upgrade.rs
