[package]
name = "aati"
version = "0.12.2"
authors = ["Husayn Haras <haras@disroot.org>"]
edition = "2021"
description = "Cross-platform package manager written in Rust."
documentation = "https://man.sr.ht/~haras/aati"
readme = "README.md"
homepage = "https://haras.srht.site/projects/aati.html"
repository = "https://git.sr.ht/~haras/aati"
license = "GPL-3.0-only"
keywords = ["cli", "clap", "cross-platform", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
ascii = "1.1.0"
clap = { version = "4.5.26", features = ["string"] }
clap_complete = "4.5.42"
colored = "2.2.0"
dirs = "5.0.1"
hex = "0.4.3"
humansize = "2.1.3"
lz4 = "1.28.1"
ring = "0.16.20"
rustc_version = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
tar = "0.4.43"
tiny_http = "0.12.0"
toml = "0.7.8"
ureq = "2.12.1"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
