[package]
name = "aati"
version = "0.12.3"
authors = ["Husayn Haras <haras@disroot.org>"]
edition = "2021"
description = "Cross-platform package manager written in Rust."
documentation = "https://man.sr.ht/~haras/aati"
readme = "README.md"
homepage = "https://haras.srht.site/projects/aati.html"
repository = "https://git.sr.ht/~haras/aati"
license = "GPL-3.0-only"
keywords = ["cli", "clap", "cross-platform", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
ascii = "1.1.0"
clap = { version = "4.5.33", features = ["string"] }
clap_complete = "4.5.47"
colored = "3.0.0"
dirs = "6.0.0"
hex = "0.4.3"
humansize = "2.1.3"
lz4 = "1.28.1"
ring = "0.17.14"
rustc_version = "0.4.1"
serde = { version = "1.0.219", features = ["derive"] }
tar = "0.4.44"
tiny_http = "0.12.0"
toml = "0.8.20"
ureq = "3.0.10"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
